Entering Clip End above 10000 resets back to 10000 #88762

Closed
opened 2021-06-03 00:07:09 +02:00 by Yegor · 9 comments

System Information
Operating system: Linux-5.4.0-72-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.119.03

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8
Worked: (newest version of Blender that worked as expected)

Short description of error
If trying enter something above 10000 in the clip end property of the view in the N panel gets back to 10000 IF(!) you entered something in the clip start property beforehand.

Exact steps for others to reproduce the error
Open a fresh scene. In the N panel View tab enter something in the clip start. Then enter a value above 10000 in the clip end property. It'll drop back to 10000. If try that again, then it'll apply correctly.
If you go straight away into the clip end field skipping altering the clip start field, then it'll apply correctly as well.

**System Information** Operating system: Linux-5.4.0-72-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.119.03 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` Worked: (newest version of Blender that worked as expected) **Short description of error** If trying enter something above 10000 in the clip end property of the view in the N panel gets back to 10000 IF(!) you entered something in the clip start property beforehand. **Exact steps for others to reproduce the error** Open a fresh scene. In the N panel View tab enter something in the clip start. Then enter a value above 10000 in the clip end property. It'll drop back to 10000. If try that again, then it'll apply correctly. If you go straight away into the clip end field skipping altering the clip start field, then it'll apply correctly as well.
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I can repro if I use {key TAB} to go from Start to End and then {key TAB} again to go to some next field.
If I use {key Enter} to confirm Start, then go into End, it works properly.
It also works correctly if I use {key Enter} to confirm End (even if I came here by using {key TAB} from Start)

Just to make sure: this is what we are talking about, right?

I can repro if I use {key TAB} to go from Start to End and then {key TAB} again to go to some next field. If I use {key Enter} to confirm Start, then go into End, it works properly. It also works correctly if I use {key Enter} to confirm End (even if I came here by using {key TAB} from Start) Just to make sure: this is what we are talking about, right?
Member

This is probably due to 298d5eb669

This is probably due to 298d5eb669
Member

The clamping of 298d5eb669 was copied from 32fdc12923 / 9b7f44ceb5, this is what kicks in here.
We could either rethink the clamp, or define some reasonable range (not FLT_MAX).

The clamping of 298d5eb669 was copied from 32fdc12923 / 9b7f44ceb5, this is what kicks in here. We could either rethink the clamp, or define some reasonable range (not `FLT_MAX`).
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-06-03 12:53:12 +02:00

This issue was referenced by 92f8a6ac21

This issue was referenced by 92f8a6ac21acee5ee1d5151ddf11570afcaa64a8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88762
No description provided.